🚀 Configurar GitHub Actions CI/CD com servidor HTTP
- Criar estrutura completa da aplicação web em /public:
  * index.html - Página principal com formulários e seções
  * script.js - JavaScript com funcionalidades de busca, cadastro e recomendações
  * styles.css - Estilos CSS para visual profissional
  * img/logo.svg - Logo placeholder em SVG

- Atualizar package.json:
  * Adicionar http-server e wait-on como dependências
  * Criar script 'npm start' para servir arquivos estáticos
  * Configurar servidor na porta 8080

- Melhorar GitHub Actions workflow (.github/workflows/test.yml):
  * Usar Node.js 20 com cache do npm
  * Adicionar setup adequado para iniciar servidor
  * Implementar wait-on para aguardar servidor ficar pronto
  * Upload automático de screenshots e vídeos como artifacts
  * Timeout de 60s para inicialização do servidor

- Testar localmente: Todos os 6 testes Cypress passando com sucesso
- Screenshots atualizados com nova interface
- Pronto para CI/CD no GitHub Actions"

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "npx http-server public -p 8080 -c-1",
     "test": "npx cypress run --browser chrome"
   },
   "keywords": [],
@@ -10,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cypress": "^15.3.0"
+    "cypress": "^15.3.0",
+    "http-server": "^14.1.1",
+    "wait-on": "^7.2.0"
   }
 }
