--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,17 +4,37 @@ jobs:
   cypress-run:
     runs-on: ubuntu-24.04
     steps:
-  - name: Checkout code
-    uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  - name: Install dependencies
-    run: npm install
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
-  - name: Start server
-    run: npm start &
+      - name: Install dependencies
+        run: npm ci
 
-  - name: Wait for server to be ready
-    run: npx wait-on http://127.0.0.1:8080
+      - name: Start server
+        run: npm start &
+        
+      - name: Wait for server to be ready
+        run: npx wait-on http://127.0.0.1:8080 --timeout 60000
 
-  - name: Run Cypress tests
-    run: npx cypress run
+      - name: Run Cypress tests
+        run: npx cypress run
+        
+      - name: Upload screenshots on failure
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+          
+      - name: Upload videos
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
